--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,3 +1,6 @@
 .home {
   margin: 3rem 5rem;
 }
+.dashboard {
+  margin: 2.5rem 0;
+}
